# watchcat

./: .gitignore  .gitmodules  README.md  default.config.toml  format.py  project-structure.instructions.md  pyproject.toml  watchcat.config.toml
.github/copilot/: project-structure.instructions.md
.github/instructions/: code-styles.instructions.md  commit.instructions.md  guidelines.instuctions.md
design/: goal.md  workflow.md
src/jiejiebeast/: __init__.py
src/watchcat/: __init__.py  _agent.py  agent.py  arxiv.py  autoretry.py  paper.py  util.py
src/watchcat/datastore/: __init__.py  database.py  sqlite3_db.py
src/watchcat/prompt/: __init__.py  analyze.prompt.md  evaluate.prompt.md  summarize.prompt.md
src/watchcat/puller/: __init__.py  arxiv.py  arxiv_paper.py  mail.py  mailbox.py  post.py  source.py
src/watchcat/workflow/: __init__.py  analysis.py  automaton.py  evaluation.py  exceptions.py  logging.py  state.py  summary.py  topic.py
src/watchcat/workflow/checkpoint/: __init__.py  manager.py  serializers.py
src/watchcat/workflow/config/: __init__.py  loader.py
src/watchcat/workflow/plugins/: __init__.py  factory.py  registry.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_datastore.py  test_fill_out.py  test_parsers.py  test_workflow_mock.py
tests/puller/: README.md  __init__.py  test_arxiv.py  test_arxiv_paper.py  test_integration.py  test_mail.py  test_mailbox.py  test_source.py
