[project]
name = "watchcat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chuyang Chen", email = "chuyangchen2018@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "click>=8.2.1",
    "litellm>=1.71.2",
    "phdkit",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
    "xdg-base-dirs>=6.0.2",
]
license = {file = "LICENSE"}

[project.scripts]
watchcat = "watchcat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
