[project]
name = "watchcat"
version = "0.0.1"
description = "An AI agent to collect research updates on your interests."
readme = "README.md"
authors = [
    { name = "Chuyang Chen", email = "chuyangchen2018@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "litellm>=1.71.2",
    "phdkit",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
    "xdg-base-dirs>=6.0.2",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
watchcat = "watchcat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
