[project]
name = "watchcat"
version = "0.0.1"
description = "An AI agent to collect research updates on your interests."
readme = "README.md"
authors = [
    { name = "Chuyang Chen", email = "chuyangchen2018@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.0",
    "click>=8.2.1",
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-storage>=3.1.0",
    "litellm>=1.71.2",
    "phdkit",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
    "xdg-base-dirs>=6.0.2",
    "zulip>=0.9.0",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
watchcat = "watchcat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
